--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
 </head>
 <body oncontextmenu="return false">
+    <div id="canvasWrapper">
+        
+    </div>
+
     <script src="sketch.js"></script>
     <script src="cell.js"></script>
 </body>
